--- a/src/layouts/page.njk
+++ b/src/layouts/page.njk
@@ -4,9 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="icon" type="image/png" sizes="32x32" href="/images/favicon.png">
-  <link rel="stylesheet" href="/styles/styles.css">
-  <title>Vanilla auth form</title>
+  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon.png">
+  <link rel="stylesheet" href="../styles/styles.css">
+  <title>{{ page_title }}</title>
 </head>
 <body>
   Hello world
@@ -14,6 +14,6 @@
   <div class="outer">
     <div class="inner"></div>
   </div>
-  <script src="/scripts/index.js"></script>
+  <script src="../scripts/index.js"></script>
 </body>
 </html>
