--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,45 +1,26 @@
 /* Fonts */
 
-/* @import 'fonts.css'; */
+@import "./fonts.css";
+
+/* Variables */
+
+@import "./border-radius.css";
+@import "./colors.css";
+@import "./effects.css";
+@import "./grids.css";
+@import "./spacers.css";
+@import "./typography.css";
 
 body {
-  background-color: tomato;
+  font-family: var(--font-family-text);
 }
 
 /* Blocks */
 
-/* @import 'blocks/visually-hidden.css';
+/*
+@import 'blocks/visually-hidden.css';
 @import 'blocks/page.css';
 @import 'blocks/header.css';
 @import 'blocks/logo.css';
 @import 'blocks/navigation.css';
-@import 'blocks/articles.css';
-@import 'blocks/archive.css';
-@import 'blocks/notice.css';
-@import 'blocks/informer.css';
-@import 'blocks/main.css';
-@import 'blocks/content.css';
-@import 'blocks/links.css';
-@import 'blocks/footer.css';
-@import 'blocks/article.css';
-@import 'blocks/authors.css';
-@import 'blocks/blob.css';
-@import 'blocks/related-articles.css';
-@import 'blocks/article-card.css'; */
-
-/* Globals */
-
-/* :root {
-    --color-grey-dark: #273238;
-    --color-grey-darker: #333333;
-    --color-grey-medium: #696969;
-    --color-grey-light: #828282;
-    --color-grey-lighter: #b1b3b6;
-    --color-grey-lightest: #e9eaeb;
-    --color-blue-medium: #26649f;
-    --color-blue-light: #32adfd;
-    --color-blue-darker: #0064a4;
-    --color-blue-lightest: #def3f6;
-    --color-green-light: #ddf2ea;
-    --color-turquoise-medium: #00abbd;
-} */
+*/
