--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -1,3 +1,8 @@
+.page,
+.page__body {
+    height: 100%;
+}
+
 body {
   font-family: var(--font-family-text);
   background-color: var(--color-white);
@@ -26,6 +31,7 @@ body {
     height: 100%;
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
     align-items: center;
   }
@@ -39,6 +45,7 @@ body {
     height: 100%;
     width: 100%;
     display: flex;
+    flex-direction: column;
     justify-content: center;
   }
 }
