--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -18,8 +18,9 @@
 /* Blocks */
 @import "./blocks/logo.css";
 @import "./blocks/modal.css";
+@import "./blocks/button.css";
 
 /* Misc */
 
-@import './layout.css';
+@import './page.css';
 @import './helpers.css';
