Import gum icons, fix button border, disable phone linkining in iOS

--- a/src/styles/variables/typography.css
+++ b/src/styles/variables/typography.css
@@ -29,5 +29,5 @@
   --size-font-radio: 15px;
   --size-line-height-radio: 20px;
 
-  --font-family-text: Geometria, Arial;
+  --font-family-text: Geometria, Arial, sans-serif;
 }
