--- a/src/styles/blocks/button.css
+++ b/src/styles/blocks/button.css
@@ -3,14 +3,14 @@ button.button {
   display: inline-block;
   height: 50px;
   line-height: 50px;
+  padding: 0px 47px;
   cursor: pointer;
 
-  padding: 0px 47px;
   border-radius: var(--size-border-radius-button);
+  border: none;
 
   background-color: var(--color-blue-300);
   color: var(--color-white);
-  border-color: transparent;
 
   &:hover {
     background-color: var(--color-blue-500);
@@ -27,9 +27,8 @@ button.button {
   }
 
   &:focus {
-    border: 1px solid var(--color-blue-900);
     background-color: var(--color-blue-500);
-    outline: none;
+    outline: 1px solid var(--color-blue-900);
   }
 
   &.inverted {
