Create readio buttons

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -12,10 +12,9 @@
 @import "./blocks/logo.css";
 @import "./blocks/modal.css";
 @import "./blocks/button.css";
-@import "./blocks/input.css";
+@import "./blocks/radio.css";
 @import "./blocks/text.css";
 @import "./blocks/title.css";
-
+@import "./blocks/form.css";
 
 @import './page.css';
-@import './helpers.css';
