--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -86,4 +86,13 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  width: 100%;
+}
+
+.main__form {
+  width: 100%;
+
+  & > * {
+    margin: 20px 0;
+  }
 }
