--- a/src/styles/variables/typography.css
+++ b/src/styles/variables/typography.css
@@ -5,6 +5,7 @@
   --size-font-text-400: 15px;
   --size-font-text-300: 13px;
   --size-font-text-200: 12px;
+  --size-font-text-150: 10px;
   --size-font-text-100: 8px;
   --size-font-text-50: 9px;
 
@@ -14,6 +15,7 @@
   --size-lineheight-text-400: 20px;
   --size-lineheight-text-300: 19px;
   --size-lineheight-text-200: 15px;
+  --size-lineheight-text-150: 13px;
   --size-lineheight-text-100: 10px;
   --size-lineheight-text-50: 20px;
 
