--- a/src/styles/blocks/form.css
+++ b/src/styles/blocks/form.css
@@ -4,7 +4,34 @@
 
   &__radio-block {
     display: flex;
-    flex: 1;
     justify-content: space-between;
+  }
+
+  &__radio-header {
+    font-size: var(--size-font-text-200);
+    line-height: var(--size-lineheight-text-200);
+    color: var(--color-grey-200);
+  }
+
+  &__field,
+  &__radio-block {
+    margin: 10px 0;
+  }
+
+  &__radio-header {
+    margin-top: 10px;
+  }
+
+  &__submit-button {
+    margin-top: 30px;
+  }
+
+  &__radio {
+    display: flex;
+    flex: 1;
+
+    &:not(:first-child) {
+      margin-left: 16px;
+    }
   }
 }
