--- a/src/styles/page.css
+++ b/src/styles/page.css
@@ -1,8 +1,3 @@
-.page,
-.page__body {
-  height: 100%;
-}
-
 .page {
   font-family: var(--font-family-text);
   background-color: var(--color-white);
@@ -20,7 +15,7 @@
 
 .main,
 .contact {
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
 }
 
@@ -91,8 +86,5 @@
 
 .main__form {
   width: 100%;
-
-  & > * {
-    margin: 20px 0;
-  }
+  max-width: 371px;
 }
