--- a/src/styles/variables/colors.css
+++ b/src/styles/variables/colors.css
@@ -1,6 +1,7 @@
 :root {
   --color-black: #000;
   --color-grey-700: #222;
+  --color-grey-500: #555;
   --color-grey-400: #666;
   --color-grey-300: #777;
   --color-grey-200: #999;
