--- a/src/styles/variables/typography.css
+++ b/src/styles/variables/typography.css
@@ -1,6 +1,7 @@
 :root {
   --size-font-text-700: 32px;
   --size-font-text-600: 26px;
+  --size-font-text-550: 24px;
   --size-font-text-500: 18px;
   --size-font-text-400: 15px;
   --size-font-text-300: 13px;
