--- a/src/styles/variables/colors.css
+++ b/src/styles/variables/colors.css
@@ -5,6 +5,7 @@
   --color-grey-400: #666;
   --color-grey-300: #777;
   --color-grey-200: #999;
+  --color-grey-150: #c4c4c4;
   --color-grey-100: #f9fafc;
   --color-white: #fff;
   --color-blue-900: #001ffe;
@@ -21,4 +22,6 @@
     #6a82fb 0%,
     #fc5c7d 100%
   );
+
+  --color-black-opacity-400: rgba(0, 0, 0, 0.4);
 }
