--- a/src/styles/blocks/field.css
+++ b/src/styles/blocks/field.css
@@ -40,6 +40,7 @@ textarea.field__input {
 
 .field__label {
   position: absolute;
+  visibility: hidden;
   left: 20px;
   top: 15px;
 
@@ -55,7 +56,7 @@ textarea.field__input {
   cursor: text;
 }
 
-.field__input:focus {
+.field__input:not(:placeholder-shown) {
   padding-top: 21px;
   padding-bottom: 7px;
 
@@ -63,12 +64,11 @@ textarea.field__input {
     top: 8px;
     font-size: var(--size-font-text-150);
     line-height: var(--size-lineheight-text-150);
+    visibility: visible;
   }
-}
 
-.field__input:not(:focus):not(:placeholder-shown) {
-  & ~ .field__label {
-    opacity: 0;
+  &:not(:focus):not([required]) ~ .field__label {
+    visibility: hidden;
   }
 }
 
