--- a/src/styles/blocks/form.css
+++ b/src/styles/blocks/form.css
@@ -2,24 +2,28 @@
   display: flex;
   flex-direction: column;
 
-  &__radio-block {
+  &__radio-box {
+    padding: 0;
+    margin: 0;
+    border: 0;
+    margin: 10px 0;
+  }
+
+  &__radio-list {
     display: flex;
     justify-content: space-between;
+    margin-top: 10px;
   }
 
   &__radio-header {
     font-size: var(--size-font-text-200);
     line-height: var(--size-lineheight-text-200);
     color: var(--color-grey-200);
+    padding: 0;
   }
 
-  &__field,
-  &__radio-block {
+  &__field {
     margin: 10px 0;
-  }
-
-  &__radio-header {
-    margin-top: 10px;
   }
 
   &__submit-button {
