--- a/src/styles/blocks/form.css
+++ b/src/styles/blocks/form.css
@@ -6,7 +6,8 @@
     padding: 0;
     margin: 0;
     border: 0;
-    margin: 10px 0;
+    margin-top: 3px;
+    margin-bottom: 17px;
   }
 
   &__radio-list {
@@ -23,7 +24,7 @@
   }
 
   &__field {
-    margin: 10px 0;
+    margin: 3px 0;
   }
 
   &__submit-button {
