Add button check

--- a/src/styles/blocks/button.css
+++ b/src/styles/blocks/button.css
@@ -12,6 +12,8 @@ button.button {
   background-color: var(--color-blue-300);
   color: var(--color-white);
 
+  transition: background-color 0.1s ease-in-out;
+
   &:hover {
     background-color: var(--color-blue-500);
   }
